feat: waste endpoints
